--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mand-mobile",
+  "name": "mand-chj-mobile",
   "version": "2.3.0-4",
   "description": "A Vue.js 2.0 Mobile UI Toolkit",
   "homepage": "https://github.com/vue-moile-component/mand-mobile",
