--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mand-chj-mobile",
-  "version": "2.3.0-4",
+  "name": "mand-mobile",
+  "version": "2.3.0",
   "description": "A Vue.js 2.0 Mobile UI Toolkit",
-  "homepage": "https://github.com/vue-moile-component/mand-mobile",
+  "homepage": "https://github.com/didi/mand-mobile",
   "main": "lib/mand-mobile.umd.js",
   "style": "lib/mand-mobile.css",
   "module": "lib/mand-mobile.esm.js",
@@ -10,10 +10,10 @@
   "typings": "types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vue-moile-component/mand-mobile"
+    "url": "git+https://github.com/didi/mand-mobile.git"
   },
   "bugs": {
-    "url": "https://github.com/vue-moile-component/mand-mobile/issues"
+    "url": "https://github.com/didi/mand-mobile/issues"
   },
   "files": [
     "lib",
